testdata/egress-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "router~172.30.79.30~istio-egressgateway-5665f98684-j6gdf.istio-system~istio-system.svc.cluster.local",
     "cluster": "istio-egressgateway",
     "metadata": {
      "POD_NAME": "istio-egressgateway-5665f98684-j6gdf",
      "istio": "sidecar",
      "REQUESTED_NETWORK_VIEW": "external",
      "ISTIO_PROXY_VERSION": "1.1.0",
      "ISTIO_PROXY_SHA": "istio-proxy:4d8eb98dee59b8cd57962230c0430fa2a486c05e",
      "ISTIO_VERSION": "release-1.1-20181120-09-15",
      "ROUTER_MODE": "sni-dnat"
     },
     "build_version": "4d8eb98dee59b8cd57962230c0430fa2a486c05e/1.9.0-dev/Clean/RELEASE"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "prometheus_stats"
                 },
                 "match": {
                  "prefix": "/stats/prometheus"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            },
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats"
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot",
          "port_value": 15011
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "tls_context": {
        "common_tls_context": {
         "tls_certificates": [
          {
           "certificate_chain": {
            "filename": "/etc/certs/cert-chain.pem"
           },
           "private_key": {
            "filename": "/etc/certs/key.pem"
           }
          }
         ],
         "validation_context": {
          "trusted_ca": {
           "filename": "/etc/certs/root-cert.pem"
          },
          "verify_subject_alt_name": [
           "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
          ]
         },
         "alpn_protocols": [
          "h2"
         ]
        }
       },
       "http2_protocol_options": {},
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin",
          "port_value": 9411
         }
        }
       ]
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_cluster": "zipkin"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "_rq(_(\\d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      }
     ],
     "use_all_default_tags": false
    }
   },
   "last_updated": "2018-11-20T15:25:44.437Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "version_info": "2018-11-21T14:33:01Z/70",
   "static_clusters": [
    {
     "cluster": {
      "name": "prometheus_stats",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2018-11-20T15:25:44.506Z"
    },
    {
     "cluster": {
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot",
         "port_value": 15011
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "h2"
        ]
       }
      },
      "http2_protocol_options": {},
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2018-11-20T15:25:44.518Z"
    },
    {
     "cluster": {
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin",
         "port_value": 9411
        }
       }
      ]
     },
     "last_updated": "2018-11-20T15:25:44.518Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "BlackHoleCluster",
      "connect_timeout": "1s"
     },
     "last_updated": "2018-11-20T15:26:05.489Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "ORIGINAL_DST_LB"
     },
     "last_updated": "2018-11-20T15:26:05.489Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.483Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.485Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.479Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.480Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.474Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.474Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.475Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.476Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15443_._.istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15443_._.istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.468Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.477Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.473Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.42422_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.42422_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.487Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.443_._.istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.468Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.469Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.472Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.488Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.443_._.kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.462Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.53_._.istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.53_._.istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.477Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.478Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.481Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.80_._.client.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.client.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.466Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.80_._.headers.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.headers.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.463Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.80_._.istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.467Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.471Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.80_._.myclient.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.myclient.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.464Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9080_._.details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.464Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9080_._.productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.465Z"
    },
    {
     "version_info": "2018-11-20T15:30:37Z/24",
     "cluster": {
      "name": "outbound_.9080_._.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:30:37.215Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9080_._.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.466Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.488Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9091_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9091_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.482Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9091_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9091_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.485Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9093_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9093_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.479Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9093_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9093_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.470Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9093_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9093_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.482Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9093_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9093_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.484Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9093_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9093_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.486Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.471Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.456Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.459Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.451Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.452Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.445Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.445Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.446Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.447Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.439Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.448Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.444Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.460Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.438Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.440Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.443Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.462Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.428Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.449Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.449Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.452Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|80||client.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||client.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.435Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|80||headers.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||headers.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.429Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.436Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.442Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|80||myclient.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||myclient.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.431Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.432Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.433Z"
    },
    {
     "version_info": "2018-11-20T15:30:37Z/24",
     "cluster": {
      "name": "outbound|9080||ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||ratings.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:30:37.215Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.434Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.461Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.454Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.457Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.450Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.441Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.453Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.456Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.460Z"
    },
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "cluster": {
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-20T15:26:05.442Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "version_info": "2018-11-21T14:33:01Z/70",
   "static_listeners": [
    {
     "listener": {
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "backend"
             }
            ]
           },
           "codec_type": "AUTO",
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:25:44.523Z"
    }
   ],
   "dynamic_active_listeners": [
    {
     "version_info": "2018-11-20T15:26:04Z/20",
     "listener": {
      "name": "0.0.0.0_15443",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "server_names": [
          "*.global"
         ]
        },
        "filters": [
         {
          "name": "envoy.filters.network.sni_cluster",
          "config": {}
         },
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://istio-egressgateway-5665f98684-j6gdf.istio-system"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://istio-egressgateway-5665f98684-j6gdf.istio-system"
             },
             "source.uid": {
              "string_value": "kubernetes://istio-egressgateway-5665f98684-j6gdf.istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "source.namespace": {
              "string_value": "istio-system"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|15443||non.existent.cluster",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|15443||non.existent.cluster"
          }
         }
        ]
       }
      ],
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.502Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:25:44.523Z"
    }
   ]
  }
 ]
}
